--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -3,17 +3,17 @@
         <div class="well profile">
             <div class="col-sm-12">
                 <div class="col-xs-12 col-sm-8">
-                    <h2> {{user.name}} </h2>
-                    <p>Email:  {{user.email}} </p>
-                    <p>Branch: {{user.branch}} </p> 
-                    <p>Role:  {{user.role}}</p> 
+                    <h2> <%=user.name%> </h2>
+                    <p>Email:  <%=user.email%> </p>
+                    <p>Branch: <%=user.branch%> </p> 
+                    <p>Role:  <%=user.role%></p> 
                 </div>
                 
                 <div class="col-xs-12 col-sm-8 text-center">
-                    <a href="/users/Edit/{{user._id}}" 
+                    <a href="/users/Edit/<%=user._id%>" 
                          class="btn btn-default" > Edit Information</a>
                          
-                    <a href="/users/changePass/{{user._id}}" 
+                    <a href="/users/changePass/<%=user._id%>" 
                         class="btn btn-default" >Change Password</a>
                 </div>
             </div>
