--- a/views/users/updateUser.ejs
+++ b/views/users/updateUser.ejs
@@ -1,3 +1,5 @@
+<%- include('../partials/_head') %>
+
 <div class="register-box">
   <div class="register-logo">
     <a href="index.html"><b>Edit</b>Admin Info</a>
@@ -7,23 +9,23 @@
 
     <form action="/users/saveEdit" method="POST">
       <div class="form-group has-feedback">
-        <input type="text" class="form-control" name="name" value="{{user.name}}"  >
-        <input type="hidden" class="form-control" name="_id" value="{{user._id}}" >
+        <input type="text" class="form-control" name="name" value="<%=user.name%>"  >
+        <input type="hidden" class="form-control" name="_id" value="<%=user._id%>" >
         <span class="glyphicon glyphicon-user form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
-        <input type="email" name="email" class="form-control" value="{{user.email}}" >
+        <input type="email" name="email" class="form-control" value="<%=user.email%>" >
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
        <div class="form-group has-feedback">
-        <input type="text" name="branch" class="form-control" value="{{user.branch}}" >
+        <input type="text" name="branch" class="form-control" value="<%=user.branch%>" >
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
 
-      {{!-- role --}}
+      <!-- {{!-- role --}} -->
       <div class="form-group">
 
-        <input type="text" name="role" list="roles" value="{{user.role}}" class="form-control" placeholder="Role">
+        <input type="text" name="role" list="roles" value="<%=user.role%>" class="form-control" placeholder="Role">
         <datalist id="roles">
           <option value="Super">
           <option value="Publisher">
@@ -73,3 +75,4 @@
     });
   });
 </script>
+<%- include('../partials/_footer') %>
