--- a/views/products/newSpecification.ejs
+++ b/views/products/newSpecification.ejs
@@ -16,7 +16,7 @@
 
                         <div class="well">
                             <form action="/products/Specifications/save" method="POST">
-                            <input type="hidden" name="id" id="id" value="{{id}}">
+                            <input type="hidden" name="id" id="id" value="<%=id%>">
                                 <div class="row">
                                     <div class="col-md-5 col5">
                                         <label class="lbl" for="specification">Specification
